--- a/BluePix/src/main/resources/application.properties
+++ b/BluePix/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/socialdb
 spring.datasource.username=pager
 spring.datasource.password=P@gerBleepBleep343.
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jmx.default-domain=BluePix
